# soundmaker

./: .gitignore  Cargo.toml  README.md
assets/: Dream Of The Ocean.mid  castle.mid  spring_rain.mid
src/: daw.rs  fm.rs  graph.rs  instrument.rs  lib.rs  main.rs  midi.rs  node.rs  oscilloscope.rs  output.rs  percussion.rs  playback.rs  prelude.rs  processor.rs  score.rs  synthesizer.rs  wave.rs  wavetable.rs
src/daw/: midi.rs  processor.rs  render.rs  synthesizer.rs
