[package]
name = "soundmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cpal = "0.15.3"
dyn-clone = "1.0.17"
fundsp = "0.16.0"
midly = "0.5.3"
rayon = "1.9.0"
typenum = "1.17.0"
